Final UI polish: Icon, Status Bar, Context Menu

--- a/src/UnrealLocresEditor.Desktop/UnrealLocresEditor.Desktop.csproj
+++ b/src/UnrealLocresEditor.Desktop/UnrealLocresEditor.Desktop.csproj
@@ -3,7 +3,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>LocresStudio</AssemblyName>
-    <Nullable>enable</Nullable>
+		<ApplicationIcon>..\UnrealLocresEditor\Assets\ULE-icon.ico</ApplicationIcon>
+		<Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     
     <!-- RELEASE OPTIMIZATIONS -->
